; ModuleID = '/home/carl/AnghaBench/linux/drivers/block/rsxx/extr_dma.c_get_dma_size.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/block/rsxx/extr_dma.c_get_dma_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rsxx_dma = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@RSXX_HW_BLK_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rsxx_dma*)* @get_dma_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_dma_size(%struct.rsxx_dma* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.rsxx_dma*, align 8
  store %struct.rsxx_dma* %0, %struct.rsxx_dma** %3, align 8
  %4 = load %struct.rsxx_dma*, %struct.rsxx_dma** %3, align 8
  %5 = getelementptr inbounds %struct.rsxx_dma, %struct.rsxx_dma* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %15

9:                                                ; preds = %1
  %10 = load %struct.rsxx_dma*, %struct.rsxx_dma** %3, align 8
  %11 = getelementptr inbounds %struct.rsxx_dma, %struct.rsxx_dma* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = shl i32 %13, 9
  store i32 %14, i32* %2, align 4
  br label %17

15:                                               ; preds = %1
  %16 = load i32, i32* @RSXX_HW_BLK_SIZE, align 4
  store i32 %16, i32* %2, align 4
  br label %17

17:                                               ; preds = %15, %9
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
